<resources>
    <string name="app_name">Fing Calories</string>
    <string name="txt_pasos">Pasos</string>
    <string name="txt_edad">Edad:</string>
    <string name="txt_peso">Peso:</string>
    <string name="txt_altura">Altura: (centimetros)</string>
    <string name="txt_activo">Días activo p/semana</string>
    <string name="txt_gen1">Hombre</string>
    <string name="txt_gen2">Mujer</string>
    <string name="button_calcular">Guardar Perfil</string>
    <string name="txt_imc">Indice de Masa Corporal:</string>
    <string name="txt_metabasal">Metabolismo Basal:</string>
    <string name="txt_mantener">Mantener tu peso:</string>
    <string name="txt_perder">Perder peso:</string>
    <string name="txt_ganar">Ganar peso:</string>
    <string name="txt_seleccion">Selecciona tu Perfil</string>
    <string name="txt_noti">Deteccion de Actividades</string>

    <string name="track">Seguimiento de Actividad</string>
    <string name="percentage">%1$d%%</string>
    <string name="bicycle">On a bicycle</string>
    <string name="foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown_activity">Unknown activity</string>
    <string name="vehicle">In a vehicle</string>
    <string name="walking">Walking</string>

</resources>
